# jedisim7

./: .gitmodules  CMakeLists.txt  README.md  compile.sh  sample_config.toml  test.sh
src/: CMakeLists.txt  jedisim.h  main.c  parse_config.c
tests/: CMakeLists.txt  config_parsing_suite.c  tests.c
